# polymarket-bot-v1

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.dashboard  K9_RULESET.md  K9_STRATEGY_SPEC.md  MODEL_IMPROVEMENT_PLAN.md  MONITORING_LOG.md  NEW_BOT_PLAN.md  README.md  STRATEGY_VS_K9.md  k9_analysis.json  package-lock.json  package.json  pyproject.toml
Polymarket-Bot/: PLAN.md
arbitrage/: btc_5m_arb_sniper_v2.py
aws/: push_secrets.sh  task-definition.json
data/: historical_analysis.txt  opportunity_analysis.txt  opportunity_scan.txt  replay_window_summaries.json  weekly_opportunities.txt
docs/: BACKTEST_RESULTS.md  EDGE_RESEARCH.md  STRATEGY.md  phase5-8-strategy-upgrade.md  phases5-9-full-strategy.md
output/: fade_markets_scan.txt
scripts/: analyze_jbecker.py  analyze_wasted_holds.py  backfill_coinbase.py  backfill_coinbase_candles.py  backfill_eth_sol.py  backfill_historical.py  backfill_polymarket.py  backfill_verification.py  backtest_30d.py  backtest_late_entry.py  backtest_sizing.py  backtest_v2_7day.py  build_enriched_training.py  claim_winnings.js  claim_winnings.py  coinbase_scenario_sim.py  dashboard.py  dashboard_lambda.py  deploy_aws.sh  deploy_dashboard.sh  deploy_dashboard_lambda.sh  deploy_fade_monitor_lambda.sh  deploy_retrain_lambda.sh  derive_api_keys.py  dump_replay_data.py  ec2_process_jbecker.py  fade_news_monitor.py  force_trade.py  measure_model_accuracy.py  opportunity_bot.py  opportunity_scanner.py  orderbook_observer.py  place_manual_trades.py  redeem.py  replay_simulator.py  run.py  (+14 more)
(+96 files in other folders)
