[project]
name = "polybot"
version = "0.1.0"
description = "Polymarket BTC 5-min Up/Down trading bot"
requires-python = ">=3.12"
dependencies = [
    "py-clob-client>=0.18.0",
    "coinbase-advanced-py>=1.6.0",
    "websockets>=13.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "aiosqlite>=0.20.0",
    "pyarrow>=18.0.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "web3>=7.14.1",
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
